feat: add Orders crud and OrderStatuses model
